// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UseEffect Default - Component with one useEffect 1`] = `
Object {
  "useEffect": Array [
    Object {
      "action": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "deps": Array [],
    },
  ],
}
`;

exports[`UseEffect Default - Component with one useEffect 2`] = `
Object {
  "calls": Array [
    Object {
      "args": Array [
        Object {
          "callFunc": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        },
        Object {},
      ],
      "result": <div>
        Some content
      </div>,
    },
  ],
  "current": Object {
    "dataTestId": null,
    "name": "OneUseEffect",
    "nthChild": undefined,
    "originMock": true,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  "hooks": Object {
    "useEffect": Array [
      Object {
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "deps": Array [],
      },
    ],
  },
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "callFunc": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        },
        Object {},
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Some content
        </div>,
      },
    ],
  },
  "parent": null,
}
`;

exports[`UseEffect Default with test id - Component with one useEffect 1`] = `
Object {
  "useEffect": Array [
    Object {
      "action": [MockFunction] {
        "calls": Array [
          Array [],
        ],
        "results": Array [
          Object {
            "type": "return",
            "value": undefined,
          },
        ],
      },
      "deps": Array [],
    },
  ],
}
`;

exports[`UseEffect Default with test id - Component with one useEffect 2`] = `
Object {
  "calls": Array [
    Object {
      "args": Array [
        Object {
          "callFunc": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "data-testid": "test-id",
        },
        Object {},
      ],
      "result": <div>
        Some content
      </div>,
    },
  ],
  "current": Object {
    "dataTestId": "test-id",
    "name": "OneUseEffect",
    "nthChild": undefined,
    "originMock": true,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  "hooks": Object {
    "useEffect": Array [
      Object {
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "deps": Array [],
      },
    ],
  },
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "callFunc": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
        },
        Object {},
      ],
      Array [
        Object {
          "callFunc": [MockFunction] {
            "calls": Array [
              Array [],
            ],
            "results": Array [
              Object {
                "type": "return",
                "value": undefined,
              },
            ],
          },
          "data-testid": "test-id",
        },
        Object {},
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Some content
        </div>,
      },
      Object {
        "type": "return",
        "value": <div>
          Some content
        </div>,
      },
    ],
  },
  "parent": null,
}
`;

exports[`UseEffect Deps in the component 1`] = `
Object {
  "calls": Array [
    Object {
      "args": Array [
        Object {
          "deps": Array [
            1,
            Object {
              "property": "some",
            },
            "Text",
            false,
          ],
        },
        Object {},
      ],
      "result": <div>
        Registered with deps
      </div>,
    },
  ],
  "current": Object {
    "dataTestId": null,
    "name": "WithDeps",
    "nthChild": undefined,
    "originMock": true,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  "hooks": Object {
    "useEffect": Array [
      Object {
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": undefined,
            },
          ],
        },
        "deps": Array [
          1,
          Object {
            "property": "some",
          },
          "Text",
          false,
        ],
      },
    ],
  },
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Object {
          "deps": Array [
            1,
            Object {
              "property": "some",
            },
            "Text",
            false,
          ],
        },
        Object {},
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Registered with deps
        </div>,
      },
    ],
  },
  "parent": null,
}
`;

exports[`UseEffect Unmount registered component 1`] = `
Object {
  "calls": Array [
    Object {
      "args": Array [
        Object {},
        Object {},
      ],
      "result": <div>
        Registered with unmount
      </div>,
    },
  ],
  "current": Object {
    "dataTestId": null,
    "name": "WithUmount",
    "nthChild": undefined,
    "originMock": true,
    "relativePath": "/src/__integration-tests__/components/UseEffect.tsx",
  },
  "hooks": Object {
    "useEffect": Array [
      Object {
        "action": [MockFunction] {
          "calls": Array [
            Array [],
          ],
          "results": Array [
            Object {
              "type": "return",
              "value": [MockFunction],
            },
          ],
        },
        "deps": Array [],
        "unmount": [MockFunction],
      },
    ],
  },
  "jestFn": [MockFunction] {
    "calls": Array [
      Array [
        Object {},
        Object {},
      ],
    ],
    "results": Array [
      Object {
        "type": "return",
        "value": <div>
          Registered with unmount
        </div>,
      },
    ],
  },
  "parent": null,
}
`;
